--- a/public/index.html
+++ b/public/index.html
@@ -13,103 +13,101 @@
 </div>
 <br>
 <div class="container">
-    <div class="text-left">
-        <div>
+    <div class="container">
+        <div class="text-center">
             <h2>
                 CIAO!
             </h2>
-            sono Guido Sangiovanni, uno sviluppatore Web.
         </div>
-    </div>
-    <br>
-    <div class="text-right">
-        <div>
+        <div class="text-left">sono Guido Sangiovanni, uno sviluppatore Web.</div>
+        <br>
+        <div class="text-right">
             <h2>
                 Di cosa mi occupo?
             </h2>
-            lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
-            Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalle PMI industriali e commerciali alle multinazionali.
+            <div>
+                lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
+                Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo
+                sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalle PMI
+                industriali
+                e commerciali alle multinazionali.
+            </div>
         </div>
+        <br>
     </div>
-    <br>
-<!--    <hr>-->
-<!--    <br>-->
-<!--    <div class="popup-container">-->
-<!--        <div class="popup">-->
-<!--            <h2>-->
-<!--                Come lavoro?-->
-<!--            </h2>-->
-<!--            Il mio lavoro solitamente si svolge in tre fasi:<br>-->
-<!--            <br>-->
-<!--            <div style="text-align: left;">-->
-<!--                <strong>Analisi</strong><br>-->
-<!--                Durante questa fase mi reco presso il cliente e, parlando con gli addetti ed analizzando documenti o software esistenti, redigo un documento nel quale indico quale lavoro dovrà essere svolto, allegando una stima di costo per il cliente.<br><br>-->
-<!--                <strong>Sviluppo</strong><br>-->
-<!--                Questa è la fase in cui mi occupo di preparare il vostro Software, utilizzando le tecnologie più adatte a soddisfare le reali esigente.<br><br>-->
-<!--                <strong>Test e Rilascio</strong><br>-->
-<!--                L'ultima e forse la più importante fase è quella del Testing, un'operazione che richiede uno sforzo congiunto da parte mia e del cliente, in questo modo verifichiamo che il lavoro sia corretto e completo.<br><br>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
     <hr>
-    <div class="popup-container">
-        <div class="popup">
+    <div class="container">
+        <div style="text-align: center">
             <h2>
                 In cosa credo?
             </h2>
+        </div>
+        <div class="text-left">
             <strong>Lavorare bene</strong><br>
-            <div class="text-left">
-                <div>
-                    Un Software su misura sulle tue esigenze ti permette di essere più produttivo, di risparmiare e di guadagnare di più, ma soprattutto di dare più valore al tuo tempo.<br><br>
-                </div>
+            <div>
+                Un Software su misura sulle tue esigenze ti permette di essere più produttivo, di risparmiare e
+                di
+                guadagnare di più, ma soprattutto di dare più valore al tuo tempo.<br><br>
             </div>
+        </div>
+        <div class="text-right">
             <strong>Formazione</strong><br>
-            <div class="text-right">
-                <div>
-                    Ogni progetto ha delle esigenze specifiche, per questo motivo dedico una parte importante del mio tempo a tenermi aggiornato sugli strumenti e le tecnologie migliori.<br><br>
-                </div>
+            <div>
+                Ogni progetto ha delle esigenze specifiche, per questo motivo dedico una parte importante del
+                mio
+                tempo a tenermi aggiornato sugli strumenti e le tecnologie migliori.<br><br>
             </div>
+        </div>
+        <div class="text-left">
             <strong>Condivisione</strong><br>
-            <div class="text-left">
-                <div>
-                    Sono fortemente convinto che condividere la propria conoscenza ed esperienza sia la strada per ottenere un mondo migliore, per tutti. Per questo motivo, insieme ad alcuni ex colleghi ed amici ho contribuito a fondare la Community si Sviluppatori "CremaWeb".<br><br>
-                </div>
+            <div>
+                Sono fortemente convinto che condividere la propria conoscenza ed esperienza sia la strada per
+                ottenere un mondo migliore, per tutti. Per questo motivo, insieme ad alcuni ex colleghi ed amici
+                ho
+                contribuito a fondare la Community si Sviluppatori "CremaWeb".<br><br>
             </div>
         </div>
     </div>
 </div>
-<div class="popup">
-    <h2>
-        Contattami
-    </h2>
+<div class="container">
+    <div class="text-center">
+        <h2>
+            Contattami
+        </h2>
+    </div>
     <div class="contact">
         <form id="contactForm">
-            <div class="row">
-                <strong style="flex-grow: 2;">Nome</strong style="flex-grow: 2;">
-                <input style="flex-grow: 5;" type="text" name="nome" value=""/>
+            <strong>Nome</strong>
+            <br>
+            <br>
+            <div class="formComponent">
+                <input type="text" name="nome" value=""/>
             </div>
             <br>
-            <div class="row">
-                <strong style="flex-grow: 2;">Email</strong>
-                <input style="flex-grow: 5;" type="email" name="email" value="" />
+            <strong>Email</strong>
+            <br>
+            <br>
+            <div class="formComponent">
+                <input type="email" name="email" value=""/>
             </div>
             <br>
-            <div class="row">
-                <strong style="flex-grow: 2;">Messaggio</strong>
-                <textarea style="flex-grow: 5;" name="messaggio"></textarea>
+            <strong>Messaggio</strong>
+            <br>
+            <br>
+            <div class="formComponent">
+                <textarea name="messaggio"></textarea>
             </div>
             <br>
-            <div style="width: 100%; display: flex; justify-content: flex-end;">
+            <div style="width: 100%; display: flex; justify-content: center;">
                 <div class="g-recaptcha" data-sitekey="6Lfu_dQUAAAAAJySlroCH3bSVBRnBAB-Wj7budSy"></div>
             </div>
             <br>
-            <div style="width: 100%; display: flex; justify-content: flex-end;">
+            <div style="width: 100%; display: flex; justify-content: center;">
                 <button id="submit" type="submit">Scrivimi!</button>
             </div>
         </form>
     </div>
     <br><br>
-</div>
 </div>
 <div id="successDiv">
     Mail inviata con successo. Grazie
@@ -130,11 +128,13 @@
     html {
         width: 100vw;
         overflow-x: hidden;
-        margin: 10pt;
+        margin: 0;
         padding: 0;
         font-family: 'Gidole-Regular';
     }
+
     body {
+        overflow-x: hidden;
         background-color: #323232;
         color: white;
         font-size: 1.8em;
@@ -142,7 +142,6 @@
 
     hr {
         width: 100vw;
-        margin-left: -5vw;
         border: 2px solid #94D1EB;
     }
 
@@ -160,81 +159,24 @@
         line-height: 22pt;
     }
 
-    /* CLASSES */
-
-    .slide-from-right-container {
-        text-align: left;
-        position: relative;
-        width: 100%;
-        overflow: hidden;
-        height: 5.5em;
-    }
-    .slide-from-right {
-        position: absolute;
-        left: 100vw;
-        animation: slidefromright 1.5s forwards;
-        animation-delay: 0.1s;
-    }
-    .slide-from-left-container {
-        text-align: right;
-        position: relative;
-        width: 100%;
-        overflow: hidden;
-        min-height: 15em;
-    }
-    .slide-from-left {
-        position: absolute;
-        right: 100vw;
-        animation: slidefromleft 1.5s forwards;
-        animation-delay: 0.1s;
-    }
-
     .text-left {
-        display: flex;
-        justify-content: flex-start;
-    }
-    .text-right {
-        display: flex;
-        justify-content: flex-end;
-    }
-    .text-left div {
         text-align: left;
-        width: 75%;
     }
-    .text-right div {
+
+    .text-right {
         text-align: right;
-        width: 75%;
     }
 
-    .popup {
-        opacity: 0;
-    }
-
-    .popup {
-        animation: popup 2s forwards;
-        animation-delay: 0.5s;
+    .text-center {
         text-align: center;
     }
 
-    .header {
-        width: 100%;
-        display: flex;
-        justify-content: center;
+    .text-left div {
+        text-align: left;
     }
 
-    @media screen and (max-width: 800px) {
-        img {
-            width: 100%;
-        }
-        body {
-            font-size: 1.4em;
-        }
-        .text-right div {
-            width: 100%;
-        }
-        .text-left div {
-            width: 100%;
-        }
+    .text-right div {
+        text-align: right;
     }
 
     .container {
@@ -265,6 +207,19 @@
         justify-content: left;
     }
 
+    .formComponent {
+        display: flex;
+        justify-content: center;
+    }
+
+    .formComponent input {
+        width: 20%;
+    }
+
+    .formComponent textarea {
+        width: 40%;
+    }
+
     #submit {
         padding: 6pt;
         line-height: 24pt;
@@ -289,51 +244,59 @@
         visibility: hidden;
     }
 
+    .header {
+        width: calc(100% - 20pt);
+        display: flex;
+        justify-content: center;
+    }
+
     #logo {
         background: url('./images/fronte.png');
         width: 1050px;
         height: 600px;
         transition: 0.8s;
     }
+
     #logo:hover {
         background: url('./images/retro.png');
         transition: 0.8s;
     }
 
-    /* ANIMATIONS */
-
-    @-webkit-keyframes slidefromright {
-        100% { left: 5vw; opacity: 1; }
-        50% { opacity: 0;}
-        0% { right: 5vw; opacity: 0; }
+    #contactForm {
+        text-align: center;
     }
 
-    @keyframes slidefromright {
-        100% { left: 5vw; opacity: 1;}
-        50% { opacity: 0;}
-        0% { right: 5vw; opacity: 0; }
-    }
+    @media screen and (max-width: 800px) {
+        #logo {
+            width: calc(100% - 20pt);
+            height: 250px;
+            background-size: cover;
+        }
 
-    @-webkit-keyframes slidefromleft {
-        100% { right: 5vw; opacity: 1; }
-        50% { opacity: 0;}
-        0% { left: 5vw; opacity: 0; }
-    }
+        body {
+            font-size: 1.4em;
+        }
 
-    @keyframes slidefromleft {
-        100% { right: 5vw; opacity: 1;}
-        50% { opacity: 0;}
-        0% { left: 5vw; opacity: 0; }
-    }
+        .text-right div {
+            width: 100%;
+        }
 
-    @keyframes popup {
-        0% { opacity: 0;}
-        100% { opacity: 1;}
-    }
+        .text-left div {
+            width: 100%;
+        }
 
-    @-webkit-keyframes popup {
-        0% { opacity: 0;}
-        100% { opacity: 1;}
+        .container {
+            margin-left: 2vw;
+            margin-right: 2vw;
+        }
+
+        .formComponent input {
+            width: 90%;
+        }
+
+        .formComponent textarea {
+            width: 90%;
+        }
     }
 </style>
 <script
@@ -345,11 +308,13 @@
     function showSuccessDiv() {
         $('#successDiv').css('visibility', 'visible');
     }
+
     function hideSuccessDiv() {
         $('#successDiv').css('visibility', 'hidden');
     }
-    $(document).ready(function() {
-        $('#contactForm').on('submit', function(e) {
+
+    $(document).ready(function () {
+        $('#contactForm').on('submit', function (e) {
             e.preventDefault();
             var nome = $('[name="nome"]').val();
             var email = $('[name="email"]').val();
@@ -364,7 +329,7 @@
                     captcha: grecaptcha.getResponse()
 
                 },
-                success: function(response) {
+                success: function (response) {
                     $('[name="nome"]').val('');
                     $('[name="email"]').val('');
                     $('[name="messaggio"]').val('');
