--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
         transition: 0.8s;
     }
 
-    #logo:hover {
+    #logo:hover, #logo:active {
         background: url('./images/retro.png');
         transition: 0.8s;
     }
@@ -278,7 +278,7 @@
             background-position: center;
             height: 420px;
         }
-        #logo:hover {
+        #logo:hover, #logo:active {
             background: url('./images/retro-small.png');
             background-repeat: no-repeat;
             background-position: center;
