--- a/public/index.html
+++ b/public/index.html
@@ -19,18 +19,26 @@
                 CIAO!
             </h2>
         </div>
-        <div class="text-center">sono Guido Sangiovanni, uno sviluppatore Web.</div>
+        <div class="text-center">sono Guido Sangiovanni, uno sviluppatore Web Freelance.</div>
         <br>
         <div class="text-right">
             <h2>
-                Di cosa mi occupo?
+                Chi sono?
             </h2>
             <div>
                 lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
                 Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo
                 sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalle PMI
-                industriali
-                e commerciali alle multinazionali.
+                industriali e commerciali alle multinazionali.
+            </div>
+        </div>
+        <br>
+        <div class="text-left">
+            <h2>
+                Cosa faccio?
+            </h2>
+            <div>
+                Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come PHP e Javascript su sistemi Linux.
             </div>
         </div>
         <br>
@@ -45,26 +53,24 @@
         <div class="text-left">
             <strong>Lavorare bene</strong><br>
             <div>
-                Un Software su misura sulle tue esigenze ti permette di essere più produttivo, di risparmiare e
-                di
-                guadagnare di più, ma soprattutto di dare più valore al tuo tempo.<br><br>
+                Un Software, come qualsiasi altro prodotto, deve essere fatto bene. Anche nei dettagli.<br>
+                Per questo motivo lavoro prestando particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni.
+                <br>
+                In questo modo puoi concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.<br><br>
             </div>
         </div>
         <div class="text-right">
             <strong>Formazione</strong><br>
             <div>
-                Ogni progetto ha delle esigenze specifiche, per questo motivo dedico una parte importante del
-                mio
-                tempo a tenermi aggiornato sugli strumenti e le tecnologie migliori.<br><br>
+                Per poter fornire il miglior Software possibile mi tengo sempre aggiornato sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.<br><br>
             </div>
         </div>
         <div class="text-left">
             <strong>Condivisione</strong><br>
             <div>
                 Sono fortemente convinto che condividere la propria conoscenza ed esperienza sia la strada per
-                ottenere un mondo migliore, per tutti. Per questo motivo, insieme ad alcuni ex colleghi ed amici
-                ho
-                contribuito a fondare la Community si Sviluppatori "CremaWeb".<br><br>
+                ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici
+                ho contribuito a fondare la Community di Sviluppatori "CremaWeb".<br><br>
             </div>
         </div>
     </div>
@@ -74,6 +80,10 @@
         <h2>
             Contattami
         </h2>
+    </div>
+    <div class="text-center">
+        Se vuoi contattarmi, vuoi approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto. Ti risponderò al pi
+         presto!<br><br>
     </div>
     <div class="contact">
         <form id="contactForm">
@@ -273,13 +283,13 @@
 
     @media screen and (max-width: 1200px) {
         #logo {
-            background: url('./images/fronte-small.png');
+            background: url('./images/fronte-medium.png');
             background-repeat: no-repeat;
             background-position: center;
             height: 420px;
         }
         #logo:hover, #logo:active {
-            background: url('./images/retro-small.png');
+            background: url('./images/retro-medium.png');
             background-repeat: no-repeat;
             background-position: center;
             height: 420px;
@@ -314,9 +324,27 @@
             width: 90%;
         }
     }
+
+    @media screen and (max-width: 640px) {
+        #logo {
+            background: url('./images/fronte-small.png');
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 214px;
+        }
+        #logo:hover, #logo:active {
+            background: url('./images/retro-small.png');
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 214px;
+        }
+
+        .header {
+            height: 214px;
+        }
+    }
 </style>
-<script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
