--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
             <br>
             <br>
             <div class="formComponent">
-                <textarea name="messaggio"></textarea>
+                <textarea name="messaggio" rows="4"></textarea>
             </div>
             <br>
             <div style="width: 100%; display: flex; justify-content: center;">
