--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
                 CIAO!
             </h2>
         </div>
-        <div class="text-center">sono Guido Sangiovanni, uno sviluppatore Web Freelance.</div>
+        <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance.</div>
         <br>
         <div class="text-right">
             <h2>
                 Chi sono?
             </h2>
             <div>
-                lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
+                Lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
                 Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo
                 sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalle PMI
                 industriali e commerciali alle multinazionali.
