--- a/public/index.html
+++ b/public/index.html
@@ -253,9 +253,10 @@
         right: 10pt;
         width: 400px;
         height: 35px;
-        background-color: #bbffbb;
+        background-color: #94D1EB;
         color: black;
-        opacity: 0.8;
+        opacity: 0.7;
+        border: 1px solid #64A9BA;
         border-radius: 0.2em;
         visibility: hidden;
     }
