--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Guido Sangiovanni</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie open source.">
 </head>
 <body>
 <div class="header">
@@ -19,7 +20,7 @@
                 CIAO!
             </h2>
         </div>
-        <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance.</div>
+        <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR).</div>
         <br>
         <div class="text-right">
             <h2>
@@ -51,7 +52,7 @@
             </h2>
         </div>
         <div class="text-left">
-            <strong>Lavorare bene</strong><br>
+            <strong class="subtitle">Lavorare bene</strong><br>
             <div>
                 Un Software, come qualsiasi altro prodotto, deve essere fatto bene. Anche nei dettagli.<br>
                 Per questo motivo lavoro prestando particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni.
@@ -60,13 +61,13 @@
             </div>
         </div>
         <div class="text-right">
-            <strong>Formazione</strong><br>
+            <strong class="subtitle">Formazione</strong><br>
             <div>
                 Per poter fornire il miglior Software possibile mi tengo sempre aggiornato sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.<br><br>
             </div>
         </div>
         <div class="text-left">
-            <strong>Condivisione</strong><br>
+            <strong class="subtitle">Condivisione</strong><br>
             <div>
                 Sono fortemente convinto che condividere la propria conoscenza ed esperienza sia la strada per
                 ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici
@@ -230,10 +231,13 @@
         width: 40%;
     }
 
-
     .header {
         display: flex;
         justify-content: center;
+    }
+
+    .subtitle {
+        color: #94D1EB;
     }
 
     #submit {
