--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Guido Sangiovanni</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie open source.">
+    <meta name="keywords" content="webapp, web applications, applicazioni web, mobile, software, gestionale, consulente, crema">
 </head>
 <body>
 <div class="header">
@@ -20,7 +21,7 @@
                 CIAO!
             </h2>
         </div>
-        <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR).</div>
+        <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR) .</div>
         <br>
         <div class="text-right">
             <h2>
