--- a/public/index.html
+++ b/public/index.html
@@ -197,14 +197,15 @@
     }
 
     .footer {
-        display: flex;
-        justify-content: center;
-        background-color: #323232;
+        left: 0;
+        text-align: center;
+        background-color: #454545;
         position: fixed;
         bottom: 0;
         width: 100vw;
-        height: 25pt;
-        font-size: 15pt;
+        height: 22pt;
+        font-size: 14pt;
+        line-height: 22pt;
     }
 
     .contact {
