--- a/public/index.html
+++ b/public/index.html
@@ -159,14 +159,16 @@
 
     input {
         padding: 3pt;
-        background-color: #96949D;
+        background-color: #454545;
+        border: 0;
         color: white;
         line-height: 22pt;
     }
 
     textarea {
         padding: 3pt;
-        background-color: #96949D;
+        background-color: #454545;
+        border: 0;
         color: white;
         line-height: 22pt;
     }
