--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,7 @@
     <meta name="keywords" content="webapp, web applications, applicazioni web, mobile, software, gestionale, consulente, crema">
 </head>
 <body>
-<div class="header">
-    <div id="logo">
-    </div>
-</div>
+<div class="topbar">Guido Sangiovanni</div>
 <br>
 <div class="container page">
     <div class="container">
@@ -84,8 +81,8 @@
         </h2>
     </div>
     <div class="text-center">
-        Se vuoi contattarmi, vuoi approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto. Ti risponderò al pi
-         presto!<br><br>
+        Se vuoi contattarmi, vuoi approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto.<br>
+        Ti risponderò al più presto!<br><br>
     </div>
     <div class="contact">
         <form id="contactForm">
@@ -198,6 +195,10 @@
         margin-right: 120pt;
     }
 
+    .page {
+        margin-top: 80px;
+    }
+
     .footer {
         left: 0;
         text-align: center;
@@ -233,6 +234,19 @@
 
     .formComponent textarea {
         width: 40%;
+    }
+
+    .topbar {
+        background-image: linear-gradient(120deg,#94D1EB 0,#6069AB 100%);
+        width: 100vw;
+        line-height: 80px;
+        font-weight: 600;
+        font-size: 60px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        text-align: center;
+        color: #323232;
     }
 
     .header {
@@ -367,6 +381,10 @@
 
         .header {
             height: 214px;
+        }
+
+        .topbar {
+            font-size: 40px;
         }
     }
 
