--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Guido Sangiovanni</title>
+    <title>Guido Sangiovanni - Freelance Web Developer</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie open source.">
     <meta name="keywords" content="webapp, web applications, applicazioni web, mobile, software, gestionale, consulente, crema">
@@ -14,16 +14,16 @@
 <div class="container page">
     <div class="container">
         <div class="text-center">
-            <h2>
+            <h3>
                 CIAO!
-            </h2>
+            </h3>
         </div>
         <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR) .</div>
         <br>
         <div class="text-right">
-            <h2>
+            <h3>
                 Chi sono?
-            </h2>
+            </h3>
             <div>
                 Lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
                 Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo
@@ -33,9 +33,9 @@
         </div>
         <br>
         <div class="text-left">
-            <h2>
+            <h3>
                 Cosa faccio?
-            </h2>
+            </h3>
             <div>
                 Progetto e sviluppo applicazioni Web e Mobile utilizzando linguaggi e piattaforme Open Source come PHP e Javascript su sistemi Linux.
             </div>
@@ -45,9 +45,9 @@
     <hr>
     <div class="container">
         <div style="text-align: center">
-            <h2>
+            <h3>
                 In cosa credo?
-            </h2>
+            </h3>
         </div>
         <div class="text-left">
             <strong class="subtitle">Lavorare bene</strong><br>
@@ -76,9 +76,9 @@
 </div>
 <div class="container">
     <div class="text-center">
-        <h2>
+        <h3>
             Contattami
-        </h2>
+        </h3>
     </div>
     <div class="text-center">
         Se vuoi contattarmi, vuoi approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto.<br>
@@ -239,8 +239,8 @@
     .topbar {
         background-image: linear-gradient(120deg,#94D1EB 0,#6069AB 100%);
         width: 100vw;
-        line-height: 80px;
-        font-size: 60px;
+        line-height: 75px;
+        font-size: 50px;
         position: absolute;
         top: 0;
         left: 0;
