theme-color test

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Guido Sangiovanni, sviluppo applicazioni Web e Mobile su tecnologie open source.">
     <meta name="keywords" content="webapp, web applications, applicazioni web, mobile, software, gestionale, consulente, crema">
+    <meta name="theme-color" content="#94D1EB">
 </head>
 <body>
 <div class="topbar">Guido Sangiovanni</div>
