--- a/public/index.html
+++ b/public/index.html
@@ -271,8 +271,8 @@
         text-align: center;
         padding: 5pt;
         top: 10pt;
-        right: 10pt;
-        width: 400px;
+        left: calc(50vw - 150px);
+        width: 300px;
         height: 35px;
         background-color: #94D1EB;
         color: black;
