--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR) .</div>
         <br>
-        <div class="text-right">
+        <div class="text-center">
             <h3>
                 Chi sono?
             </h3>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <br>
-        <div class="text-left">
+        <div class="text-center">
             <h3>
                 Cosa faccio?
             </h3>
@@ -74,6 +74,15 @@
             </div>
         </div>
     </div>
+    <hr>
+    <div class="container">
+        <div class="text-center">
+            <h3>Dove sono?</h3>
+            Abito e lavoro a Bagnolo Cremasco (CR).<br><br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.4065503180996!2d9.614184515980336!3d45.360790579100005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47813009feec99af%3A0x1ccd3e450d8601e5!2sVia%20Alcide%20De%20Gasperi%2C%2022%2C%2026010%20Bagnolo%20Cremasco%20CR!5e0!3m2!1sen!2sit!4v1580673299802!5m2!1sen!2sit" width="100%" height="320" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+    </div>
+    <br>
     <hr>
     <div class="container">
         <div class="text-center">
