--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,15 @@
     <div class="container">
         <div class="text-center">
             <h3>
-                CIAO!
-            </h3>
-        </div>
-        <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR) .</div>
-        <br>
-        <div class="text-center">
-            <h3>
                 Chi sono?
             </h3>
-            <div>
-                Lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br>
+            <div class="text-center">Sono Guido Sangiovanni, uno sviluppatore Web Freelance residente a Crema (CR).
+                <br>
+                <br>
+                <img src="./images/profile.jpeg" style="max-width:290px; border: 1px solid #999999; border-radius: 2em; filter: drop-shadow(0 0 0.75rem white);">
+                <br>
+                <br>
+                Lavoro da 10 anni nel mondo delle applicazioni Web, principalmente in ambito gestionale.<br><br>
                 Durante la mia esperienza come sviluppatore, Team Leader e Project Manager ho collaborato e gestito lo
                 sviluppo di applicazioni Web per aziende in diversi contesti e di diverse dimensioni, dalle PMI
                 industriali e commerciali alle multinazionali.
