--- a/public/index.html
+++ b/public/index.html
@@ -51,22 +51,24 @@
         <div class="text-left">
             <strong class="subtitle">Lavorare bene</strong><br>
             <div>
-                Un Software, come qualsiasi altro prodotto, deve essere fatto bene. Anche nei dettagli.<br>
-                Per questo motivo lavoro prestando particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni.
-                <br>
-                In questo modo puoi concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.<br><br>
+                Il Software, come ogni prodotto, deve essere ben progettato dalla base fino ai dettagli.<br>
+                Solo in questo modo lo strumento sarà davvero un aiuto, non più un costo, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.<br><br>
             </div>
         </div>
+        <br>
         <div class="text-right">
             <strong class="subtitle">Formazione</strong><br>
             <div>
-                Per poter fornire il miglior Software possibile mi tengo sempre aggiornato sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.<br><br>
+                Per poter fornire il miglior Software possibile mi tengo sempre aggiornato sulle nuove tecnologie e linguaggi frequentando Meetup e User Group.
+                <br>
+                Inoltre, grazie alla mia esperienza di lavoro in Team, presto sempre particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni del Software.
             </div>
         </div>
+        <br>
         <div class="text-left">
             <strong class="subtitle">Condivisione</strong><br>
             <div>
-                Sono fortemente convinto che condividere la propria conoscenza ed esperienza sia la strada per
+                Credo fortemente che condividere la propria conoscenza ed esperienza sia la strada per
                 ottenere un mondo migliore, per tutti. <br> Ecco perchè, insieme ad alcuni ex colleghi ed amici
                 ho contribuito a fondare la Community di Sviluppatori "CremaWeb".<br><br>
             </div>
@@ -89,7 +91,7 @@
             </h3>
         </div>
         <div class="text-center">
-            Se vuoi contattarmi, vuoi approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto.<br>
+            Se vuoi contattarmi per approfondire i temi di cui mi occupo o ti serve un preventivo, scrivimi pure nella form che trovi qua sotto.<br>
             Ti risponderò al più presto!<br><br>
         </div>
         <div class="contact">
@@ -201,8 +203,8 @@
     }
 
     .container {
-        margin-left: 120pt;
-        margin-right: 120pt;
+        margin-left: 100pt;
+        margin-right: 100pt;
     }
 
     .page {
