--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,10 @@
             <strong class="subtitle">Lavorare bene</strong><br>
             <div>
                 Il Software, come ogni prodotto, deve essere ben progettato dalla base fino ai dettagli.<br>
-                Solo in questo modo lo strumento sarà davvero un aiuto, non più un costo, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.<br><br>
+                Solo in questo modo lo strumento sarà davvero un aiuto, non più un costo, e potrai finalmente concentrarti su ciò che ti interessa veramente dando così maggior valore al tuo tempo.
             </div>
         </div>
+        <br>
         <br>
         <div class="text-right">
             <strong class="subtitle">Formazione</strong><br>
@@ -64,6 +65,7 @@
                 Inoltre, grazie alla mia esperienza di lavoro in Team, presto sempre particolare attenzione alla qualità del codice, alla mantenibilità e alle prestazioni del Software.
             </div>
         </div>
+        <br>
         <br>
         <div class="text-left">
             <strong class="subtitle">Condivisione</strong><br>
